--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "slim/psr7": "^1.3",
         "slim/http": "^1.2",
         "php-di/php-di": "^6.3",
-        "mustache/mustache": "^2.13"
+        "mustache/mustache": "^2.13",
+      "ext-json": "*"
     }
 }
